--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ async-trait = "0.1"
 asynchronous-codec = "0.6"
 unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }
 futures = "0.3.28"
+serde = { version = "1.0.186", features = ["derive"] }
+serde_json = "1.0.105"
 libp2p = { version = "0.51.3", features = ["async-std", "macros"] }
